fix broken css

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,6 @@ body {
   line-height: 17px;
   letter-spacing:-0.16px;
   font-weight: 500;
-  opacity: 0.8;
 
   display: flex;
   flex-direction: row;
